Notes: Flask Market Login User functionality explanation

--- a/Flask/Docs/FlaskMarket/01.BuildNotes.md
+++ b/Flask/Docs/FlaskMarket/01.BuildNotes.md
@@ -478,3 +478,198 @@ Again, we use the `password` attribute and not the`password_hash` from our `Mode
 So from our User model, we grab this "password_hash" convert it to an actual password hash and save this as a new attribute called "password".
 
 To summarize, here we are seeing how our `Models/user` ties with our `routes/register` because of our `@setter` code and securely stores our Users password.
+
+## Login User
+
+For the login functionality we will be using the `Route/login`, `Form/login_form` adn the `template/login.html`.
+
+### Side Note #1
+
+As we build functionalities to our page, we need to remember to update out navbar if we have a navigation element for these functionalities. For example, here when we are building the login page, we had to go back to our `base.html` and update the `url_for` function for our login `a` tag. Which again, the url_for takes both route and route function.
+
+```html
+<a class="nav-link" href="{{ url_for('login.login_page">Login</a>
+```
+
+### Side Note #2
+
+When functionalities are closely tied like login and register, we make sure to allow the user to easily navigate between the two actions by tying the html templates via an anchor tag. For example, if a user clicks login but is not registered, we offer a button to quickly go to the register page.
+
+```html
+<div class="checkbox mb-3">
+    <h6>Already have an account?</h6>
+    <a class="btn btn-sm btn-secondary" href="{{ url_for('login.login_page') }}">Login</a>
+</div>
+```
+
+The login logic is applied via the `LoginManager` package, so in our `app/__init__.py` we need to initialize and register our App.
+
+```python
+
+from flask_login import LoginManager
+# ...
+login_manager = LoginManager()
+
+# Creating the Flask application factory function
+
+def create_app():
+    app = Flask(__name__)
+    # ...
+    # IInitializing and configuring Flask extensions
+    login_manager.init_app(app)
+```
+
+When logging in a user, we perform two checks.
+
+1. Does the user already exist?
+2. Does the password provided by the User match the hashed password?
+
+The first check is fairly easy, we simply take the information the user submitted via the Login Form and query our Database for that user.
+
+```python
+attempted_user = User.query.filter_by(username=form.username.data).first()
+```
+
+To perform the second check, we need to take the password submitted by the user and in our `Models/user` perform a decryption operation to see if the password provided is correct. We do this by creating a new method for our User and run this in our `routes/login`. If we don't add this encryption check our passwords would never match and the login functionality would never work.
+
+```python
+# Models/user.py
+def check_password_correction(self, attempted_password):
+    return bcrypt.check_password_hash(self.password_hash, attempted_password)
+```
+
+```python
+# Routes/login.py
+if attempted_user and attempted_user.check_password_correction(attempted_password=form.password.data):
+```
+
+After these checks, we can login a user by a simple function call.
+
+```python
+from flask import Blueprint, render_template, redirect, url_for, flash
+from app.forms.login_form import LoginForm
+from app.models.user import User
+from flask_login import login_user
+
+login_bp = Blueprint("login", __name__)
+
+
+@login_bp.route("/login", methods=["GET", "POST"])
+def login_page():
+    # ...
+            login_user(attempted_user)
+            flash(
+                f"Success! You are logged in as: {attempted_user.username}",
+                category="success",
+            )
+            return redirect(url_for("market.market_page"))
+        else:
+            # TODO: Ask the user to register
+            flash(
+                "Username and password do not match! Please try again",
+                category="danger",
+            )
+
+    return render_template("login.html", form=form)
+
+```
+
+The first time running this code, we ran into an error that said `"Missing user_loader or request_loader"`. To fix this issue, we add the `user_loader` to our `Models/user`.
+
+```python
+# Models/user.py
+from app import db, login_manager, bcrypt
+from flask_login import UserMixin
+
+# User loader callback
+@login_manager.user_loader
+def load_user(user_id):
+    return User.query.get(int(user_id))
+```
+
+This callback is what helps Flask understand during refreshes if the user is logged-in or not. How this works is each time we reload a page, this callback runs and verifies the user is logged-in.
+
+From the [flask-login documentation](https://flask-login.readthedocs.io/en/latest/) we also see that our User class needs to inherit from the `UserMixin` class in order to have access to some required methods.
+
+From the docs:
+
+```text
+To make implementing a user class easier, you can inherit from UserMixin, which provides default implementations for all of these properties and methods. (It’s not required, though.)
+```
+
+```python
+# Models/user.py
+class User(db.Model, UserMixin):
+```
+
+Finally, after having the backend login functionality completed, we go to our frontend `templates/base.html` and dynamically change our navbar based on the condition that the user is logged in.
+
+We do this by using the `current_user.is_authenticated` condition check to say, if the user is logged in change the navbar to show a logout button instead of the login button as well as showing some User specific information.
+
+```html
+<div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            {# the url_for is for the defined route not html #}
+            <a class="nav-link" href="{{ url_for('home.home_page') }}"
+                >Home <span class="sr-only">(current)</span></a
+                >
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('market.market_page') }}">Market</a>
+        </li>
+    </ul>
+    {# current_user is accessible via the flask_login package #}
+    {% if current_user.is_authenticated %}
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" style="color: lawngreen; font-weight: bold">
+            <i class="ph ph-coins"></i>
+            <i>{{ current_user.prettier_budget }}</i>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link">Welcome, {{ current_user.username }}</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('logout.logout_page') }}">Logout</a>
+        </li>
+    </ul>
+    {% else %}
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login.login_page') }}">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('register.register_page') }}">Register</a>
+        </li>
+    </ul>
+    {% endif %}
+</div>
+```
+
+A key thing to note here is how `current_user` has access to our `Models/User` methods. For example, to make sure our budget is presented in a nice way we created a "pretty" function in our `Modes/user` and call this function in our `base.html`.
+
+Note how we create this by using a `property` to make the call an attribute access and not a function call.
+
+```python
+# Models/user.py
+# Here we define a property so the call becomes current_user.prettier_budget in our HTML
+@property
+def prettier_budget(self):
+    """Get a formatted representation of the budget with commas for thousands.
+    Returns:
+    str: The budget formatted as a string with commas for thousands.
+    """
+    return "{:,}".format(self.budget)
+```
+
+```html
+<!-- base.html -->
+<li class="nav-item">
+    <a class="nav-link" style="color: lawngreen; font-weight: bold">
+    <i class="ph ph-coins"></i>
+    <i>{{ current_user.prettier_budget }}</i>
+    </a>
+</li>
+```
