Notes: Logout User Flask markeplace functionality

--- a/Flask/Docs/FlaskMarket/01.BuildNotes.md
+++ b/Flask/Docs/FlaskMarket/01.BuildNotes.md
@@ -673,3 +673,123 @@ def prettier_budget(self):
     </a>
 </li>
 ```
+
+## Logout User
+
+The logout functionality is fairly simple, we first create a `route/logout` and create a condition that the user must be logged in in order to invoke this route. We then use a built-in flask logout method to complete the process.
+
+The important part of this process is to remember to use the `@login_required` decorator in our logout route definition.
+
+```python
+#routes/logout.py
+from flask import Blueprint, redirect, url_for, flash
+from flask_login import logout_user, login_required
+
+logout_bp = Blueprint("logout", __name__)
+
+
+@logout_bp.route("/logout")
+@login_required
+def logout_page():
+    logout_user()
+    flash("You have been logged out!", category="info")
+    # this url_for is calling a route NOT an html template
+    return redirect(url_for("home.home_page"))
+
+```
+
+In our `base.html` we use the `url_for` function on the anchor tag for logout.
+
+```html
+{% if current_user.is_authenticated %}
+   <ul class="navbar-nav">
+      <li class="nav-item">
+         <a class="nav-link" style="color: lawngreen; font-weight: bold">
+            <i class="ph ph-coins"></i>
+            <!-- prettier_budget comes from our Models/user -->
+            <i>{{ current_user.prettier_budget }}</i>
+         </a>
+      </li>
+      <li class="nav-item">
+         <a class="nav-link">Welcome, {{ current_user.username }}</a>
+      </li>
+      <li class="nav-item">
+         <a class="nav-link" href="{{ url_for('logout.logout_page') }}">Logout</a>
+      </li>
+   </ul>
+{% else %}
+```
+
+## Home Page Logic
+
+The home page contains a "Get Started" button that takes our users to the `market.html`. However, before a user can navigate to this page, the user MUST be logged in. Therefore, we make a correction to our `routes/market.py` and add the `login_required()` decorator.
+
+```python
+# routes/market.py
+
+@market_bp.route("/market", methods=["GET", "POST"])
+@login_required
+def market_page():
+    purchase_form = PurchaseForm()
+    selling_form = SellItemForm()
+```
+
+The next part of this process is defining what to do if the user is NOT logged in yet but is attempting to view the market page. We need to redirect him to the `login.html`, this is done by defining our `route/login.login_page` as our login_view.
+
+So, the conditions are:
+
+1. If the user is logged in, proceed to market page. (Implemented with decorator)
+
+2. If the user is not logged in, redirect to login page. (Implemented with login_manager.login_view)
+
+We redirect the user by defining our `login_view` in our `app/__init__.py` file. Note here that the login_manager will automatically flash messages so all we have to do is define what category to flash these messages under.
+
+```python
+#app/__init__.py
+
+# Configuring what view to return if login_required decorator fails (Specifically, what route to run to return this view)
+login_manager.login_view = "login.login_page"
+login_manager.login_message_category = "info"
+```
+
+After testing this redirection, in the URL we should see `{port}/login?next=%2Fmarket` which is confirming that after the user logs in, he will be redirected to our market page.
+
+The last change we made was to our `route/register` which is currently registering a user but then asks them to login. It attempts to take them to the marketplace because that is our `redirect` BUT since the user is not logged in they are asked to do so. To improve the user experience, we automatically log in the user which will allow them to successfully redirect to our market page.
+
+```python
+#routes/register.py
+
+# After registering, the user is redirect to the market.market_page route
+login_user(user_to_create)
+flash(
+    f"Account created successfully! You are now logged in as {
+        user_to_create.username}",
+    category="success",
+)
+# here we are providing a route not an HTML template
+return redirect(url_for("market.market_page"))
+```
+
+## Item Purchasing Part 1
+
+The first change we made in order to add the Item Purchasing functionality was a front-end change to our `market.html`. Here, we leveraged Bootstrap's grid system to place Available Items on one side of the market place page and Owned Items on the other.
+
+```html
+{% extends 'base.html' %}
+{% block title %}
+Market Page
+{% endblock %}
+{% block content %}
+<h1>Market Page</h1>
+<div class="row" style="margin-top:20px; margin-left:20px">
+   <div class="col-8">
+   </div>
+   <div class="col-4">
+   </div>
+</div>
+{% endblock %}
+```
+
+### Modal Windows
+
+Modal windows allow us to focus our user on a certain piece of information. For this project, we will build several to confirm critical actions before they take place like purchasing, reading more about an item and selling an item.
