Notes: complete Flask market build notes

--- a/Flask/Docs/FlaskMarket/01.BuildNotes.md
+++ b/Flask/Docs/FlaskMarket/01.BuildNotes.md
@@ -790,6 +790,344 @@ Market Page
 {% endblock %}
 ```
 
-### Modal Windows
+### More Info Modal Window
 
-Modal windows allow us to focus our user on a certain piece of information. For this project, we will build several to confirm critical actions before they take place like purchasing, reading more about an item and selling an item.
+Modal windows allow us to focus our user's attention to a certain piece of information. For this project, we will build several modal windows to confirm critical actions such as purchasing, reading more about an item and selling an item.
+
+The strategy here is to build dynamic modal windows using Bootstrap by passing our `item` object to fill in item specific data.
+
+In our `Market.html` there are two buttons that open our modal windows, here we make sure to include out modal windows html file by leveraging jinja syntax.
+
+```html
+{% for item in items %}
+{% include 'includes/items_modals.html' %}
+<tr>
+   <td>{{ item.id }}</td>
+   <td>{{ item.name }}</td>
+   <td>{{ item.barcode }}</td>
+   <td>${{ item.price }}</td>
+   <td>
+      {# The data-target is what defined what modal window to run and it's how we dynamically change each Modal window #}
+      <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-MoreInfo-{{ item.id }}">More Info</button>
+      <button class="btn btn-outline btn-success" data-toggle="modal" data-target="#Modal-PurchaseConfirm-{{ item.id }}">Purchase this Item</button>
+   </td>
+</tr>
+{% endfor %}
+```
+
+In order to tie our buttons with their respective Modal window we use two properties, one is the `data-toggle` and the other is `data-target` and pass our object using the jinja syntax `{{}}`.
+
+For example, our "More Info" button contains the following properties:
+
+```html
+<button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-MoreInfo-{{ item.id }}">More Info</button>
+```
+
+In our `templates/includes/items_modals.html` the more info modal window contains this:
+
+```html
+<!-- More Info Modal Window-->
+<div class="modal fade" id="Modal-MoreInfo-{{ item.id }}"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">
+                    {{ item.name }}
+                </h5>
+                <button type="button" class="close"
+                    data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{ item.description }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                    data-dismiss="modal">Close
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+```
+
+So, the `data-target` is the `id` of the Modal window we want to render and we an dynamically pass our item to this html file even though it's located in a separate directory.
+
+## Item Purchasing Part 2
+
+### Confirm Purchase Modal Window
+
+For our Confirm Purchase modal window, we follow the same steps we used to tie our buttons to our modal windows but this time, we add a form to verify that the user wants to purchase an item and leverage this form to pass to our backend what item was purchased. In our backend we will edit our `routes/market.py` and add logic that checks if a User can purchase an item.
+
+Our Confirm Purchase modal window contains the following:
+
+```html
+<!-- Purchase Item Confirm Modal Window-->
+<div class="modal fade" id="Modal-PurchaseConfirm-{{ item.id }}"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="ModalLabel">
+                    {{ item.name }}
+                </h5>
+                <button type="button" class="close"
+                    data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {# We can access the purchase_form because it's passed as context in our market.market_page route #}
+                <form method="POST">
+                    {{ purchase_form.hidden_tag() }}
+                    <h4 class="text-center">
+                        Are you sure you want to buy {{ item.name }} for {{ item.price }}$ ?
+                    </h4>
+                    <br>
+                    <h6 class="text-center">
+                        By clicking Purchase, you will purchase this item.
+                    </h6>
+                    <br>
+                    {# The backend will consume the input element info in our Market route #}
+                    {# This is how our backend will know what item was purchased. #}
+                    <input id="purchased_item" name="purchased_item" type="hidden" value="{{item.name}}">
+                    {{ purchase_form.submit(class="btn btn-outline-success btn-block") }}
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                    data-dismiss="modal">Close
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+```
+
+Again, our `forms/purchase_form.py` is only used to capture the `POST` method and pass specific item information to our backend. To view this item information from our form, we can use the `purchase_form.__dict__` method and debug as needed.
+
+What we will see here is that our `purchase_form` contains a submit field that is being translated to an `input` element each time a user clicks the `Submit` button to confirm purchase.
+
+To summarize, our purchase form has a submit field, we call this submit field in our Modal window by using jinja syntax, in the backend, each time the submit field is clicked an input element gets generated therefore we will use this input element to pass out item information to out backend.
+
+We can see this if we run
+
+```python
+# route/market.py
+
+print(purchase_form["submit"])
+```
+
+HTML translation
+
+```html
+<input id="submit" name="submit" type="submit" value="Purchase Item">
+```
+
+With this in mind, we can now move on and create a custom input element in our `items_modals.html`
+
+```html
+{# We can access the purchase_form because it's passed as context in our market.market_page route #}
+<form method="POST">
+   {{ purchase_form.hidden_tag() }}
+   <h4 class="text-center">
+      Are you sure you want to buy {{ item.name }} for {{ item.price }}$ ?
+   </h4>
+   <br>
+   <h6 class="text-center">
+      By clicking Purchase, you will purchase this item.
+   </h6>
+   <br>
+   {# The backend will consume the input element info in our Market route #}
+   {# This is how our backend will know what item was purchased. #}
+   <input id="purchased_item" name="purchased_item" type="hidden" value="{{item.name}}">
+   {{ purchase_form.submit(class="btn btn-outline-success btn-block") }}
+</form>
+```
+
+A key thing here is that out input element is `hidden`, the only purpose of this element is to pass item information to our backend. In other words, "this is just background information the backend will consume."
+
+Specifically, this background information is going to come from our `request` object, NOT our `purchase_form`. By default, this request object has access to our forms which is why we can access our form input data by using:
+
+```python
+purchased_item_name = request.form.get("purchased_item")
+```
+
+`.get()` looks at the `name` attribute and returns the `value` of our form input element. So now, we know exactly what item the user is trying to purchase.
+
+## Purchase Items Checks
+
+The first check we perform is to verify the `current_user` can purchase the item. This `current_user` is made available by the `flask_login` package.
+
+```python
+# routes/market.py
+
+from flask_login import login_required, current_user
+```
+
+The `can_purchase` check is in our `models/user` as a method so all we have to do is call it in our `routes/market.py`. Specifically, this checks if the current user's budget is greater than the item's price.
+
+```python
+# models/user.py
+
+def can_purchase(self, item_to_purchase):
+    return self.budget >= item_to_purchase.price
+```
+
+If the `current_user` can purchase the item, we then proceed with setting the current user as the item owner. The logic that implements this is written in our `models/item.py` file.
+
+```python
+#models/items.py
+def set_owner(self, user):
+    # assign ownership to the current user who is logged in
+    self.owner = user.id
+    # decrease current user budget - item price
+    user.budget -= self.price
+    db.session.commit()
+
+def remove_owner(self, user):
+    # current user is removed as owner of item
+    self.owner = None
+    # increase current user budget by item price
+    user.budget += self.price
+    db.session.commit()
+
+```
+
+Again, all of this is invoked in our `routes/market.py`
+
+```python
+if request.method == "POST":
+        # Purchase Item Logic
+        purchased_item_name = request.form.get("purchased_item")
+        # To view more info about the form use the __dict__ dunder method.
+        # .get() looks at the name attribute and returns the value
+        # print(request.form.get("purchased_item"))
+        purchased_item = Item.query.filter_by(name=purchased_item_name).first()
+        if purchased_item:
+            if current_user.can_purchase(purchased_item):
+                purchased_item.set_owner(current_user)
+                flash(
+                    f"Congratulations! You purchased {
+                        purchased_item.name} for ${purchased_item.price}",
+                    category="success",
+                )
+            else:
+                flash(
+                    f"Unfortunately, you don't have enough money to purchase {
+                        purchased_item.name}!",
+                    category="danger",
+                )
+```
+
+So to summarize, in our `User` model we added the logic to check if a user can purchase an item and in our `Item` model we added the logic to actually assign an item to a User, specifically the `current_user`. This is basically a level of abstraction we did where the `Model` class contains the implementation and our `Route` contains the invocation.
+
+## Form Resubmission JavaScript Warning
+
+As we build our Purchase Item functionality, we ran into a JavaScript warning message pop up each time we attempted to refresh the page - `Confirm Form Resubmission`?
+
+In order to handle this error, we created separate logic for both `POST` and `GET` request methods.
+
+If the user is refreshing, that is a `GET` method so we query all available items for sale and render out `market.html` page.
+
+"Items available in the market" means items without an owner.
+
+```python
+# routes/market.py
+items = Item.query.filter_by(owner=None)
+```
+
+If the user is submitting, that is a `POST` method so we capture information about the item they are purchasing or selling, run logic checks and redirect them to the market page, in other words, keep them on the market page.
+
+See code comments on `routes/market.py` for more info.
+
+## Selling Items
+
+Selling is similar to Purchasing an item.
+
+In our `routes/market.py` we begin by modifying our `GET` method by adding to the context `owned_items` which are items that are owned by the current user.
+
+```python
+# Query items owned by the current user
+owned_items = Item.query.filter_by(owner=current_user.id)
+```
+
+With this information available, we go to our `templates/market.html` and pass this variable to our frontend.
+
+```html
+<div class="col-4">
+<h2>Owned Items</h2>
+<p>Click on an Itemt to sell back to the Market.</p>
+<div class="row">
+    {%for owned_item in owned_items%}
+    {% include 'includes/owned_items_modals.html' %}
+    {# make sure to always define your grid system #}
+    <div class="col-md-6">
+        <div style="margin-bottom: 5px" class="card text-center bg-dark">
+            <div class="card-body">
+                <h5 class="card-title">{{ owned_item.name }}</h5>
+                {# data-target is what triggers our Modal window #}
+                <button type="button" class="btn btn-outline-danger" style="margin-bottom: 5px"
+                    data-toggle="modal" data-target="#Modal-SellingConfirm-{{ owned_item.id }}">
+                Sell this Item
+                </button>
+                <p class="card-text"><strong>
+                    This item costs ${{ owned_item.price }}
+                    </strong>
+                </p>
+            </div>
+        </div>
+    </div>
+    {%endfor%}
+</div>
+```
+
+Next, we configure a modal window `templates/includes/owned_items_modals.html`. Which is very similar to Purchasing Item Modal therefore we also create the necessary form, found in `forms/sell_item_form.py`.
+
+The final step in this is to add our "Selling" logic to our `routes/market.py`
+
+```python
+# Sell Item Logic
+sold_item_name = request.form.get("sold_item")
+sold_item = Item.query.filter_by(name=sold_item_name).first()
+if sold_item:
+    if current_user.can_sell(sold_item):
+        sold_item.remove_owner(current_user)
+        flash(
+            f"Congratulations! You sold {
+                sold_item.name} back to market!",
+                category='success'
+            )
+    else:
+        flash(
+            f"Something went wrong with selling {
+                sold_item.name}",
+                category='danger'
+            )
+```
+
+Again, here we see the abstraction calls made by adding the logic to our `Models` and we see how `request.form.get("sold_item")` is the generated input field from our `sell_item_form.py` captured in the `./templates/includes/owned_items_modals.html` frontend.
+
+```html
+<!--Owned_items_modals.html -->
+
+<form method="POST">
+    {{ selling_form.hidden_tag() }}
+    <h4 class="text-center">
+        Are you sure you want to sell {{ owned_item.name }} for ${{ owned_item.price }} ?
+    </h4>
+    <br>
+    <h6 class="text-center">
+        By clicking Sell, you will sell this item back to the Market.
+    </h6>
+    <br>
+    {# The backend will consume the input element info in our Market route #}
+    {# This is how our backend will know what item was sold. #}
+    <input id="sold_item" name="sold_item" type="hidden" value="{{owned_item.name}}">
+    {{ selling_form.submit(class="btn btn-outline-danger btn-block") }}
+</form>
+```
